Fixed the alignment of the header

--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,6 @@
   50% {
     opacity: 1;
   }
-  /* 85% {
-    opacity: 1;
-    filter: blur(2px);
-  } */
   100% {
     filter: blur(0);
   }
@@ -53,7 +49,7 @@ html {
   color: whitesmoke;
 }
 h1 {
-  margin-bottom: 10vh;
+  margin-bottom: 5vh;
   font-weight: 200;
   color: rgb(207, 207, 207);
 }
